syntax = "proto3";

package proto.v1;

option go_package = "./pb";

service ClientService {
    rpc CreateClient(CreateClientRequest) returns (CreateClientResponse);
    rpc GetClient(GetClientRequest) returns (GetClientResponse);
    rpc ListClients(ListClientsRequest) returns (ListClientsResponse);
    rpc UpdateClient(UpdateClientRequest) returns (UpdateClientResponse);
    rpc DeleteClient(DeleteClientRequest) returns (DeleteClientResponse);
}

message CreateClientRequest {
    string name = 1;
    string brand_name = 2;
    string logo_url = 3;
}

message CreateClientResponse {
    string id = 1;
}

message GetClientRequest {
    string id = 1;
}

message GetClientResponse {
    string id = 1;
    string name = 2;
    string brand_name = 3;
    string logo_url = 4;
}

message ListClientsRequest {
    int32 page = 1;
    int32 per_page = 2;
}

message ListClientsResponse {
    repeated Clients clients = 1;
    int32 total = 2;
    int32 total_pages = 3;

    message Clients {
        string id = 1;
        string name = 2;
        string brand_name = 3;
        string logo_url = 4;
    }
}

message UpdateClientRequest {
    string id = 1;
    string name = 2;
    string brand_name = 3;
    string logo_url = 4;
}

message UpdateClientResponse {
}

message DeleteClientRequest {
    string id = 1;
}

message DeleteClientResponse {

}
