syntax = "proto3";

package proto.v1;

option go_package = "./pb";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
    rpc ListOrderProducts(ListOrderProductsRequest) returns (ListOrderProductsResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
    string image_url = 4;
    string client_id = 5;
}

message CreateProductResponse {

}

message GetProductRequest {
    string id = 1;
    string client_id = 2;
}

message GetProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    string image_url = 5;
}

message ListProductsRequest {
    int32 page = 1;
    int32 per_page = 2;
    string client_id = 3;
}

message ListProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
    int32 total_pages = 3;
    string client_id = 4;

    message Product {
        string id = 1;
        string name = 2;
        string description = 3;
        float price = 4;
        string image_url = 5;
    }
}

message ListOrderProductsRequest {
    string order_id = 1;
}

message ListOrderProductsResponse {
    repeated Product products = 1;

    message Product {
        string id = 1;
        string name = 2;
        string description = 3;
        float price = 4;
        string image_url = 5;
        int32 quantity = 6;
    }
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    string image_url = 5;
    string client_id = 6;
}

message UpdateProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    string image_url = 5;
}

message DeleteProductRequest {
    string id = 1;
    string client_id = 2;
}

message DeleteProductResponse {
    bool deleted = 1;
}
